syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "guilds.proto";

option csharp_namespace = "tobeh.Valmar";
package workers;

// Service definition for manging lobby workers
service Workers {
  
  rpc GetUnclaimedInstance (google.protobuf.Empty) returns (InstanceDetailsMessage);
  
  rpc ClaimInstance (ClaimInstanceMessage) returns (InstanceDetailsMessage);

  rpc GetAssignedGuildOptions (GetAssignedGuildOptionsMessage) returns (guilds.GuildOptionsMessage);
  
  rpc AssignInstanceToServer (AssignInstanceToServerMessage) returns (InstanceDetailsMessage);
}

message AssignInstanceToServerMessage {
  int32 login = 1;
  int64 serverId = 2;
}

message GetAssignedGuildOptionsMessage {
  int32 instanceId = 1;
}

message ClaimInstanceMessage {
  int32 instanceId = 1;
  google.protobuf.StringValue lastClaimUlid = 2; // provide if the claim is a renewal of a previous, still valid claim
  string claimUlid = 3;
  string workerUlid = 4;
}

message InstanceDetailsMessage {
  string botToken = 1;
  int64 botId = 2;
  int32 id = 3;
}
